# mcp-server-anime

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  KIRO_SETUP.md  MANIFEST.in  Makefile  README.md  SECURITY.md  debug_cache_workflow.py  pyproject.toml  pytest-all.ini  pytest-integration.ini  pytest-unit.ini  pytest.ini  requirements.txt  run_mcp_server.bat  tox.ini
docs/: README.md  architecture.md  configuration.md  developer-guide.md  distribution.md  enhanced_parsing_examples.md  index.md  integration-testing.md  integration_testing.md  kiro-configuration.md  kiro-setup.md  parsing-examples.md  recent-fixes-and-enhancements.md  test-maintenance-procedures.md  test-maintenance.md  testing-with-poetry.md
docs/refactoring/: README.md  cleanup-status.md  complete.md  issues-report.md  modernization-complete.md  modernization-summary.md  phase1-complete.md  phase2-complete.md  phase2-plan.md  phase3-complete.md  phase3-plan.md  summary.md  test-fixes-needed.md
scripts/: __init__.py  build.bat  ci-pipeline.bat  dev_tools.py  load_titles.py  quality-check.bat  run_integration_tests.bat  run_integration_tests.py  setup_dev.py  setup_test_environment.py  test-all.bat  test-coverage-analysis.bat  test-coverage-check.bat  test-integration.bat  test-poetry.bat  test-unit.bat  test_commands.py  test_coverage.bat  test_coverage.py  test_runner.py  test_tools.py  validate_package.py  verify_installation.py
src/mcp_server_anime/: __init__.py  extensible_server.py  server.py  tools.py
src/mcp_server_anime/cli/: __init__.py  analytics_cli.py  database_cli.py
src/mcp_server_anime/config/: __init__.py  settings.py
src/mcp_server_anime/core/: __init__.py  analytics_scheduler.py  cache.py  database_config.py  error_formatter.py  error_handler.py  exceptions.py  http_client.py  index_optimization.py  logging_config.py  maintenance_scheduler.py  models.py  multi_provider_db.py  persistent_cache.py  persistent_cache_models.py  schema_manager.py  security.py  titles_db.py  transaction_logger.py
src/mcp_server_anime/providers/: __init__.py  anidb.py  base.py  config.py  registry.py  tools.py
src/mcp_server_anime/providers/anidb/: __init__.py  config.py  provider.py  search_service.py  service.py  titles_downloader.py  xml_parser.py
tests/: README.md  __init__.py  conftest.py  test_extensible_server.py  test_isolation.py  test_isolation_fixtures.py  test_mcp_server.py  test_project_structure.py  test_test_isolation.py  test_tool_execution.py  test_tools.py
tests/cli/: test_analytics_cli.py  test_database_cli.py
tests/core/: test_cache.py  test_database_integration.py  test_error_handler.py  test_exceptions.py  test_http_client.py  test_logging_config.py  test_models.py  test_persistent_cache.py
tests/fixtures/: database_mocks.py
tests/integration/: test_database_integration_full.py  test_enhanced_parsing_integration.py  test_integration.py  test_integration_mock.py
tests/providers/: __init__.py  test_base.py  test_config.py  test_registry.py  test_tools.py
tests/providers/anidb/: __init__.py  test_config.py  test_persistent_cache_integration.py  test_provider.py  test_service.py  test_xml_parser.py
tests/providers/anidb/fixtures/: anime_details_response.xml  anime_search_response.xml  api_mocks.py  empty_search_response.xml  isolation_fixtures.py  malformed_xml.xml  minimal_anime_details.xml
tests/regression/: test_enhanced_parsing_regression.py
