[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "mcp-server-anime"
version = "0.2.1"
description = "Model Context Protocol server for accessing anime data through AniDB HTTP API"
authors = [
    {name = "MCP Server Anime", email = "mcp-server-anime@jamesconner.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["mcp", "anime", "anidb", "api", "server", "model-context-protocol", "kiro"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.12.0",
    "respx>=0.20.0",
    "ruff>=0.12.0",
    "mypy>=1.8.0",
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
    "detect-secrets>=1.5.0",
]

[project.scripts]
mcp-server-anime = "mcp_server_anime.server:main"

[project.urls]
Homepage = "https://github.com/example/mcp-server-anime"
Repository = "https://github.com/example/mcp-server-anime"
Documentation = "https://mcp-server-anime.readthedocs.io"
"Bug Tracker" = "https://github.com/jamesbconner/mcp-server-anime/issues"
Changelog = "https://github.com/jamesbconner/mcp-server-anime/blob/main/CHANGELOG.md"

[tool.poetry]
packages = [{include = "mcp_server_anime", from = "src"}]
include = [
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
exclude = [
    "tests/",
    "docs/",
    "scripts/",
    ".github/",
    ".pytest_cache/",
    ".mypy_cache/",
    ".ruff_cache/",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "__pycache__/",
]



[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-args
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q", # flake8-quotes
    "FLY", # flynt
    "PERF", # perflint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_server_anime"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
no_implicit_optional = true
strict_equality = true
strict_concatenate = true
extra_checks = true
show_error_codes = true
show_column_numbers = true
pretty = true
color_output = true
explicit_package_bases = true
mypy_path = "src"
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "lxml.*",
    "httpx.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/mcp_server_anime",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-branch",
    "--cov-fail-under=90",
    "--tb=short",
    "--durations=10",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that may require network access",
    "slow: Tests that take a long time to run",
    "smoke: Basic smoke tests for core functionality",
    "api: Tests that interact with external APIs",
    "cache: Tests related to caching functionality",
    "error: Tests focused on error handling",
    "validation: Tests for input validation",
    "xml: Tests for XML parsing functionality",
    "http: Tests for HTTP client functionality",
    "tools: Tests for MCP tools",
    "service: Tests for service layer functionality",
    "config: Tests for configuration management",
    "models: Tests for data models",
    "server: Tests for server functionality",
    "providers: Tests for provider system",
    "extensible: Tests for extensibility features",
    "circuit_breaker_isolation: Tests requiring circuit breaker isolation",
    "complete_isolation: Tests requiring complete test isolation",
    "database: Tests for database integration components",
    "cli: Tests for command-line interface components",
    "analytics: Tests for analytics and transaction logging",
]
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::UserWarning:httpx.*",
    "ignore::UserWarning:asyncio.*",
    "ignore:ast.Str is deprecated:DeprecationWarning",
    "ignore:ast.Constant is deprecated:DeprecationWarning",
    "error::UserWarning:mcp_server_anime.*",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
cache_dir = ".pytest_cache"
log_cli = false
log_cli_level = "INFO"
log_file = "tests.log"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["src/mcp_server_anime"]
branch = true
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/site-packages/*",
    "**/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]



[tool.bandit]
exclude_dirs = ["tests", "docs", "scripts", ".venv", "venv", "__pycache__", "EXAMPLE_ShokoBot"]
skips = [
    "B101",  # assert_used - allow in tests
    "B324",  # hashlib_new_insecure_functions - MD5 used for cache keys only
]
